--- a/src/pages/WelcomePage/WelcomePage.module.scss
+++ b/src/pages/WelcomePage/WelcomePage.module.scss
@@ -21,8 +21,8 @@
     max-width: 30rem;
     padding: 5rem;
     width: 100%;
-    max-height: 20rem;
-    height: 100%;
+    // max-height: 20rem;
+    // height: 100%;
     background: #212121;
     display: flex;
     flex-direction: column;
